syntax = "proto3";

package common;
option go_package = "github.com/pachyderm/pachyderm/v2/src/server/worker/common";

import "pfs/pfs.proto";
import "gogoproto/gogo.proto";

message Input {
  pfs.FileInfo file_info = 1;
  pfs.Commit parent_commit = 5;
  string name = 2;
  string join_on = 8;
  bool outer_join = 11;
  string group_by = 10;
  bool lazy = 3;
  string branch = 4;
  string git_url = 6 [(gogoproto.customname) = "GitURL"];
  bool empty_files = 7;
  bool s3 = 9; // If set, workers won't create an input directory for this input
}
